# discopilot

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
discopilot/: __init__.py
discopilot/bot/: __init__.py  discord_client.py
discopilot/examples/: config.example.yaml
discopilot/publishers/: __init__.py  base_publisher.py  twitter_publisher.py
discopilot/scripts/: __init__.py  install_service.py  run_bot.py  setup_cmd.py  test_twitter_direct.ppy
discopilot/utils/: __init__.py  config.py  media.py  rate_limiter.py  setup.py
examples/: config.example.yaml  simple_bot.py
integration_tests/: test_live_twitter.py
scripts/deployment/: cleanup_discopilot.sh  install_dependencies.sh  lightsail_launch.sh  restart_discopilot.sh  run_discopilot.sh  setup_discopilot.sh  update_bot.sh  update_discopilot.sh
tests/: conftest.py  test_config.py  test_twitter.py  test_twitter_publisher.py
